--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/mrKomchan/65130904-react_sample",
+  "homepage": "https://Komchan.github.io/65130904-react_sample/",
   "name": "react-sample",
   "version": "0.1.0",
   "private": true,
